Prevent touchscreen disable on lid close or user inactivity

In the event of user inactivity or lid close, this patch will prevent
the touchscreens from being disabled if an external touch device is
connected to the system.

Bug: 797411
Change-Id: I12afd55edfe343ff6508bd2fdd0f4d09c93b5a98
Component: backlights settter, touch device, wake up, power manager
Testing: Added ash unittests to check for expected behavior
Reviewed-on: https://chromium-review.googlesource.com/1102151
Commit-Queue: Malay Keshav <malaykeshav@chromium.org>
Reviewed-by: Dan Erat <derat@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567710}
Former-commit-id: 2000976a356bb27d591e67eac2cdf7351afc99d7